# iof

./: .editorconfig  Cargo.toml  README.md  rustfmt.toml
.cargo/: check.sh  config.toml  flamegraph.sh
.github/workflows/: benchmark.yml  ci.yml
benches/: .gitignore  read.rs  read_cursor.rs  read_file.rs  show.rs
examples/: benchmark_integers.rs  doc_fn_read.rs  doc_fn_read.txt  doc_get_line.rs  doc_get_line_some.rs  doc_get_line_some.txt  doc_macro_read.rs  doc_macro_read.txt  doc_macro_show.rs  doc_macro_show.txt  doc_read.rs  doc_read.txt  doc_read_ascii.rs  doc_read_c_compatible.rs  doc_read_c_compatible.txt  doc_show.rs  doc_show.txt  dot_product.rs  macros-input.txt  macros-output.txt  macros.rs  mat.rs  read.rs  string_reverse.rs
src/: array.rs  formatted.rs  lib.rs  mat.rs  read_into.rs  sep_by.rs  stdio.rs  stream.rs  write_into.rs
src/array/: guard.rs  mod.rs  tests.rs
src/array/tests/: tracked.rs
src/ascii/: char.rs  mod.rs  string.rs
src/mat/: row_iter.rs  tests.rs
src/read/: error.rs  fmt.rs  impls.rs  iter.rs  locale.rs  macros.rs  mod.rs  read_from.rs  read_into.rs  read_one_from.rs  read_one_into.rs  tuple.rs
src/read/impls/: bool.rs  float.rs  signed.rs  unsigned.rs
src/read_into/: error.rs  from_str.rs  impls.rs  macros.rs  parse.rs
src/stdio/: read_into.rs  stream.rs
src/stream/: error.rs  ext.rs  input_stream.rs  line_buf.rs  mod.rs  tests.rs  traits.rs
src/utf8char/: extensible.rs  fixed.rs  iter_extensible.rs  iter_fixed.rs  mod.rs  tests.rs
src/write/: dimension.rs  impls.rs  macros.rs  mod.rs  ranked.rs  sep_by.rs  separator.rs  separators.rs  writer.rs
src/write_into/: display.rs  impls.rs  macros.rs
tests/: array.rs  ascii.rs  bin.rs  bool.rs  buffer.rs  char.rs  float.rs  getline.cpp  hash_set.rs  ill_buffer.rs  ill_data.rs  impl_by_macro.rs  integers.rs  mat.rs  sep_by.rs  slice.rs  sorted_vec.rs  stdin.rs  stdin_lock.rs  stdout.rs  stream.cpp  string.cpp  string.rs  test_bin.rs  tuple.rs  vec.rs
