[package]
name = "iof"
version = "0.2.0-alpha.2"
edition = "2021"
description = "Read from and write data to console or file in simple formats."
keywords = ["input", "oj", "stream", "formatted"]
categories = [
    "value-formatting",
    "command-line-interface",
    "mathematics",
    "data-structures",
]
readme = "README.md"
rust-version = "1.80"
repository = "https://github.com/TheVeryDarkness/iof"
license = "MIT OR Apache-2.0"

[dependencies]

[features]
default = []

[dev-dependencies]
anyhow = "1.0.86"
ntest = "0.9.3"
