[package]
name = "iof"
version = "0.3.1"
edition = "2021"
description = "Read from and write data to console or file in simple formats."
keywords = ["io", "input", "output", "oj", "stream", "formatted"]
categories = [
    "value-formatting",
    "command-line-interface",
    "encoding",
    "data-structures",
]
readme = "README.md"
rust-version = "1.80"
repository = "https://github.com/TheVeryDarkness/iof"
license = "MIT OR Apache-2.0"

[dependencies]

[features]
default = []

[dev-dependencies]
anyhow = "1.0.86"
criterion = "0.5.1"
ntest = "0.9.3"

[[bench]]
name = "read"
harness = false

[[bench]]
name = "show"
harness = false
