[package]
name = "iof"
version = "0.3.2"
edition = "2021"
description = "Read from and write data to console or file in simple formats."
keywords = ["input", "output", "oj", "stream", "formatted"]
categories = [
    "value-formatting",
    "command-line-interface",
    "encoding",
    "data-structures",
]
readme = "README.md"
rust-version = "1.81.0"
repository = "https://github.com/TheVeryDarkness/iof"
license = "MIT OR Apache-2.0"

[dependencies]

[features]
c-compatible = []

[dev-dependencies]
anyhow = "1.0.86"
criterion = "0.5.1"
ntest = "0.9.3"
pprof = { version = "0.14", features = ["criterion", "flamegraph"] }

[[bench]]
name = "read"
harness = false

[[bench]]
name = "show"
harness = false
